# darwin-cxx-exception-bug

./: README.md  nixpkgs.nix  overlay.nix
foo/: CMakeLists.txt  default.nix  test.cpp
hsfoo/: Setup.hs  foo-wrapper.cpp  hsfoo.cabal  hsfoo.nix
hsfoo/src/: Foo.hs
hsfoo/src/Foo/: Manual.hs
hsfoo/test/: test-manual.hs  test.hs
libfoo/: CMakeLists.txt  default.nix  foo.cpp  foo.pc.in
