cmake_minimum_required(VERSION 3.12)
project(test-foo VERSION 1.0.0 DESCRIPTION "an executable that executes the foo function")
include(GNUInstallDirs)
add_executable(test test.cpp)
find_package(PkgConfig REQUIRED)
pkg_check_modules(FOO REQUIRED foo)
target_link_libraries(test ${FOO_LIBRARIES})
target_include_directories(test PUBLIC ${FOO_INCLUDE_DIRS})
install(TARGETS test RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
