cabal-version: 2.2
name:          hsfoo
version:       0.0.0.0
license:       BSD-3-Clause
author:        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Custom

custom-setup
    setup-depends: base, Cabal >= 1.23

library
    hs-source-dirs: src
    cxx-options: -std=c++11

    if os(darwin)
      extra-libraries: c++
    else
      extra-libraries: stdc++
      ghc-options:   -lstdc++

    ghc-options: -Wall

    pkgconfig-depends: foo >= 1.0.0

    build-depends:
        base >= 4.9 && < 5
      , bytestring
      , inline-c
      , inline-c-cpp

    exposed-modules:
        Foo

    default-language: Haskell2010

test-suite test-opencv
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          test.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends: base >= 4.8 && < 5, hsfoo
