cabal-version: 2.2
name:          hsfoo
version:       0.0.0.0
license:       BSD-3-Clause
author:        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple

library
    hs-source-dirs: src

    cxx-sources: foo-wrapper.cpp

    if os(darwin)
      extra-libraries: c++
      ld-options: -Wl,-keep_dwarf_unwind
    else
      extra-libraries: stdc++
      ghc-options:   -lstdc++

    ghc-options: -Wall

    pkgconfig-depends: foo >= 1.0.0

    build-depends:
        base >= 4.9 && < 5
      , bytestring
      , inline-c
      , inline-c-cpp

    exposed-modules:
        Foo
        Foo.Manual

    default-language: Haskell2010

executable test
    hs-source-dirs:   test
    main-is:          test.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends: base >= 4.8 && < 5, hsfoo

executable test-manual
    hs-source-dirs:   test
    main-is:          test-manual.hs
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends: base >= 4.8 && < 5, hsfoo
